@@ -12,6 +12,7 @@
 #include <string.h>
 #include <errno.h>
 #include <stdlib.h>
+#include <sys/param.h>
 
 #include <internal/os.h>
 
@@ -44,62 +45,78 @@ read_link_file_info (const char *filename, int *filetype, int *type)
   return 0;
 }
 
+/* filenames passed and the symlinks itself are always RISC OS filenames.  */
 int
 __resolve_symlinks (const char *filename_in, char *filename_out,
 		    size_t fn_out_size)
 {
+  static char *buffer = NULL; /* We're reusing our buffer.  */
+  static size_t bufsize = 0;
   int link_count = 0;
-  int size, type, filetype, fd = -1;
-  char *buffer = NULL;
+  int fd = -1;
   int regs[10];
 
   if (strlen (filename_in) + 1 > fn_out_size)
     return __set_errno (ENAMETOOLONG);
 
-  if ((buffer = malloc (fn_out_size)) == NULL)
-    return __set_errno (ENOMEM);
-
   strcpy (filename_out, filename_in);
 
-  if (read_link_file_info (filename_out, &filetype, &type) != 0)
-    goto error;
-
-  while (type && filetype == LINK_FILETYPE)
+  while (1)
     {
+      int type, filetype;
+      size_t size;
+      char *sep;
+
+      if (read_link_file_info (filename_out, &filetype, &type) != 0)
+        break;
+
+      if (!type || filetype != LINK_FILETYPE)
+	return 0;
+
       if (link_count >= MAX_LINKS)
 	{
 	  __set_errno (EMLINK);	/* or ELOOP? */
-	  goto error;
+	  break;
 	}
 
       if (__os_fopen (0x4F, filename_out, &fd) != NULL)
 	{
 	  __set_errno (ENOENT);
-	  goto error;
+	  break;
 	}
 
-      if (__os_fread (fd, buffer, 4, regs) != NULL)
+      if (__os_fread (fd, buffer, 4, regs) != NULL
+	  || *((unsigned int *) buffer) != LINK_ID
+	  || __os_fread (fd, &size, 4, regs) != NULL)
 	{
 	  __set_errno (EIO);
-	  goto error;
+	  break;
 	}
 
-      if (*((unsigned int *) buffer) != LINK_ID)
-	{
-	  __set_errno (EIO);
-	  goto error;
-	}
-
-      if (__os_fread (fd, &size, 4, regs) != NULL)
-	{
-	  __set_errno (EIO);
-	  goto error;
+      if (size >= bufsize)
+        {
+	  /* Our buffer is too small.  */
+          if (size >= fn_out_size)
+	    {
+	      /* It doesn't make sense to continue as the user supplied
+		 buffer is already too small for this destination link.  */
+	      __set_errno (ENAMETOOLONG);
+	      break;
+	    }
+	  free (buffer);
+	  bufsize = (size < MAXPATHLEN) ? MAXPATHLEN : size + 1;
+	  if ((buffer = malloc (bufsize)) == NULL)
+	    {
+	      bufsize = 0;
+	      __set_errno (ENOMEM);
+	      break;
+	    }
 	}
 
       if (__os_fread (fd, buffer, size, regs) != NULL)
 	{
 	  __set_errno (EIO);
-	  goto error;
+	  break;
 	}
 
       __os_fclose (fd);
@@ -107,53 +124,47 @@ __resolve_symlinks (const char *filename_in, char *filename_out,
 
       buffer[size] = '\0';
 
-      if (strchr (buffer, ':') != 0)
+      /* Cases to consider:
+	   foo + ADFS::doh.$.bar => ADFS::doh.$.bar (case 1)
+	   foo + gcc:bar         => gcc:bar (case 1)
+	   foo + bar             => bar (case 1)
+	   foo1.foo2 + bar       => foo1.bar (case 2)
+	   gcc:foo + bar         => gcc:bar (case 2)
+	 Note that "ADFS::doh.$ + bar => ADFS::doh.$.bar" (which would be an
+	 exception on case 2) can not happen as the root can not be a link
+	 file.  */
+      if (strchr (buffer, ':') != NULL
+          || (sep = strrchr (filename_out, '.')) == NULL
+	     && (sep = strrchr (filename_out, ':')) == NULL)
 	{
-	  /* symlink contains absolute file path */
-	  if (strlen (buffer) + 1 > fn_out_size)
+	  /* symlink contains absolute file path
+	     or the symlink contains a relative file path but filename_out
+	     only contains leafname or xyz: (= xyz$path).  */
+	  if (size + 1 > fn_out_size)
 	    {
 	      __set_errno (ENAMETOOLONG);
-	      goto error;
+	      break;
 	    }
 
-	  strcpy (filename_out, buffer);
+	  memcpy (filename_out, buffer, size + 1);
 	}
       else
 	{
-	  /* symlink contains relative file path */
-	  char *sep;
-
-	  /* Strip the link leaf name */
-	  if ((sep = strrchr (filename_out, '.')) != NULL)
-	    *(sep + 1) = '\0';
-	  else if ((sep = strrchr (filename_out, ':')) != NULL)
-	    *(sep + 1) = '\0';
-	  else
-	    *filename_out = '\0';
-
-	  if (strlen (filename_out) + strlen (buffer) + 2 > fn_out_size)
+	  /* symlink contains relative file path and we have to concat with
+	     filename_out after stripping its leafname.  */
+	  if ((sep - filename_out) + size + 2 > fn_out_size)
 	    {
 	      __set_errno (ENAMETOOLONG);
-	      goto error;
+	      break;
 	    }
 
-	  strcat (filename_out, buffer);
+	  memcpy (sep + 1, buffer, size + 1);
 	}
-
-      if (read_link_file_info (filename_out, &filetype, &type) != 0)
-	goto error;
 
       link_count++;
     }
 
-  free (buffer);
-
-  return 0;
-
-error:
-  if (buffer)
-    free (buffer);
-
+  /* Error happened.  */
   if (fd != -1)
     __os_fclose (fd);
 
